# data-pipeline-prod

./: README.md  pyproject.toml
airflow/: Dockerfile  docker-compose.override.yml  docker-compose.yaml  requirements.txt
airflow/config/: airflow.cfg
airflow/dags/: airbyte_dag.py  dag_spark.py
airflow/include/: bronze_customers.py  bronze_customers_2.py
data_viz/: dash.py
lakehouse/: docker-compose.yml  validade_data.py
lakehouse/etl/bronze/: bronze_customers.py  bronze_order_items.py  bronze_orders.py  bronze_products.py  bronze_reviews.py
lakehouse/etl/clients/: spark_client.py
lakehouse/etl/functions/: Session_spark.py
lakehouse/etl/silver/: dim_cliente.py  dim_data.py  dim_endereco_entrega.py  dim_pagamento.py  dim_produto.py  ft_avaliacoes.py  ft_estoque.py  ft_vendas.py
lakehouse/garage/etc/: garage.toml
lakehouse/gold_layer/: .user.yml  config_duckdb.txt  dbt_project.yml  profiles.yml
lakehouse/gold_layer/models/gold/: _source.yml  gold_analise_avaliacoes.sql  gold_analise_estoque.sql  gold_analise_rfm.sql  gold_performace_produtos.sql  gold_vendas_overview.sql
scripts/: add_cdc_on_airbyte.sql  generate_data.py
