[project]
name = "data-pipeline-prod"
version = "0.1.0"
description = ""
authors = [
    {name = "Mairon Costa",email = "duartemairon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pyspark (==3.5.7)",
    "dbt-core (>=1.11.2,<2.0.0)",
    "dbt-duckdb (>=1.10.0,<2.0.0)",
    "duckdb (>=1.4.4,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "faker (>=40.1.0,<41.0.0)",
    "boto3 (>=1.42.24,<2.0.0)"
]
